# wasp-crm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
appdata/config/: language_de.conf  wasp-crm.conf
appdata/data/articles/: A-00001.json  A-00002.json
cmake/: standard-project-settings.cmake
code/utils/: CMakeLists.txt  meson.build
code/utils/include/utils/: config_file.hpp  currency.hpp  date.hpp  datetime_utils.hpp  decimal.hpp  filesystem_utils.hpp  price.hpp  string_utils.hpp
code/utils/src/: config_file.cpp  currency.cpp  datetime_utils.cpp  filesystem_utils.cpp  string_utils.cpp
code/utils/test/: CMakeLists.txt  currency_test__initialization.cpp  meson.build  test_currency__multiplication.cpp  test_decimal.cpp
code/wcrm-gtk3/: CMakeLists.txt  meson.build
code/wcrm-gtk3/src/: app_config.hpp  app_context.hpp  article_editor.cpp  article_editor.hpp  article_main_pane.hpp  article_main_panel.hpp  article_selector.hpp  customer_editor.cpp  customer_editor.hpp  customer_main_panel.hpp  customer_selector.hpp  invoice_editor.cpp  invoice_editor.hpp  invoice_main_panel.hpp  invoice_selector.hpp  main.cpp  main_window.cpp  main_window.hpp  object_editor_panel.hpp  object_main_pane.hpp  object_main_panel.hpp  object_referencer_dialog.hpp  object_selector_panel.hpp  util_gtk.hpp  util_translate.cpp  util_translate.hpp  vendor_editor.cpp  vendor_editor.hpp  vendor_main_panel.hpp  vendor_selector.hpp
code/wcrm-lib/: CMakeLists.txt  meson.build
code/wcrm-lib/include/wcrm-lib/manager/: article_manager_json.hpp  customer_manager_json.hpp  invoice_manager_json.hpp  manager_interface.hpp  vendor_manager_json.hpp
code/wcrm-lib/include/wcrm-lib/objects/: article.hpp  base_object.hpp  customer.hpp  invoice.hpp  object_comparator.hpp  vendor.hpp
code/wcrm-lib/src/manager/: article_manager_json.cpp  customer_manager_json.cpp  invoice_manager_json.cpp  vendor_manager_json.cpp
code/wcrm-lib/src/objects/: object_comparator.cpp
docs/: business-context.plantuml  class-diagram.plantuml  data-organization.plantuml  entity-model.plantuml
